fix(system): Jackson-migrate PSMimeContentAdapter (#1994)
Annotate design-object XML for Jackson-backed PSXmlSerializationHelper:
base64 content wire, attachment-id, suppressed label/description/content-attached.
Buffer payload as byte[] for BeanUtils-safe restore and re-readable streams.
Add golden + RT (inline and attachment) + legacy <null> root tests; migrate
interface test to JUnit 5. Deviations doc under 505-betwixt-jackson.

Fixes #1994
Related: #1920 #1892 #1823 #505

> Co-Authored by Grok Build using grok-4.5 with agent main.